--- a/tailwind/app_template/static_src/package.json
+++ b/tailwind/app_template/static_src/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "tailwindcss": "^1.0.0-beta.8",
+    "tailwindcss": "^1.0.1",
     "autoprefixer": "^9.5.1",
     "clean-css-cli": "^4.3.0",
     "node-sass": "^4.12.0",
