--- a/.gitignore
+++ b/.gitignore
@@ -142,4 +142,4 @@ Temporary Items
 tailwind/version.py
 
 # node.js
-tailwind/app_template/static_src/package-json.lock
+tailwind/app_template/static_src/package-lock.json
