'build-clean' doesn't delete the right folder

--- a/tailwind/app_template/static_src/package.json
+++ b/tailwind/app_template/static_src/package.json
@@ -5,7 +5,7 @@
     "build": "npm run build-clean && npm run build-postcss && npm run build-cleancss",
     "build-postcss": "postcss --config . --map false --output ../static/css/styles.min.css ./src/styles.scss",
     "build-cleancss": "cleancss -o ../static/css/styles.min.css ../static/css/styles.min.css",
-    "build-clean": "rimraf ../css",
+    "build-clean": "rimraf ../static/css",
     "start": "watch 'npm run build-postcss' ./src"
   },
   "keywords": [],
