Sets pre-commit hooks

--- a/tox.ini
+++ b/tox.ini
@@ -21,3 +21,15 @@ deps =
 setenv =
     DJANGO_SETTINGS_MODULE = test_project.settings
     PYTHONPATH = {toxinidir}
+
+[flake8]
+max-line-length = 80
+select = C,E,F,W,B,B950,T
+ignore = E231,E501,W503
+
+[isort]
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
+line_length = 88
