--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,13 +25,14 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6,<3.9"
+python = "^3.7"
 django = ">=2.2,<3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.5"
 pytest-django = "^3.8.0"
 tox = "^3.14.3"
+pre-commit = "^2.6.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
