--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ pytest = "^5.3.5"
 pytest-django = "^3.8.0"
 tox = "^3.14.3"
 pre-commit = "^2.6.0"
+isort = "^5.6.4"
+flake8 = "^3.8.4"
+black = "^20.8b1"
 
 [build-system]
 requires = ["poetry>=0.12"]
