--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,5 +38,5 @@ flake8 = "^3.8.4"
 black = "^20.8b1"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
