--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,14 +46,21 @@ jobs:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
       # check all Python images here: https://circleci.com/docs/2.0/circleci-images/#python
-      - image: circleci/python:3.7.8-buster
+      - image: circleci/python:3.7.9-buster
   "python-3.8":
     <<: *shared
     docker:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
       # check all Python images here: https://circleci.com/docs/2.0/circleci-images/#python
-      - image: circleci/python:3.8.5-buster
+      - image: circleci/python:3.8.6-buster
+  "python-3.9":
+    <<: *shared
+    docker:
+      # specify the version you desire here
+      # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
+      # check all Python images here: https://circleci.com/docs/2.0/circleci-images/#python
+      - image: circleci/python:3.9.0-buster
 
 workflows:
   version: 2
@@ -61,3 +68,4 @@ workflows:
     jobs:
       - "python-3.7"
       - "python-3.8"
+      - "python-3.9"
