--- a/tailwind/app_template_v2/static_src/package.json
+++ b/tailwind/app_template_v2/static_src/package.json
@@ -6,7 +6,7 @@
     "build": "npm run build:clean && npm run build:sass && npm run build:postcss && npm run build:cleancss",
     "build:clean": "rimraf ../static/css",
     "build:sass": "node-sass --output-style compressed src/styles.scss ../static/css/styles.css",
-    "build:postcss": "postcss --config . --map false --output ../static/css/styles.css ../static/css/styles.css",
+    "build:postcss": "NODE_ENV=production postcss --config . --map false --output ../static/css/styles.css ../static/css/styles.css",
     "build:cleancss": "cleancss -o ../static/css/styles.css ../static/css/styles.css",
     "dev": "watch 'npm run dev:sass && npm run dev:postcss' ./src",
     "dev:sass": "node-sass --output-style expanded --source-map true src/styles.scss ../static/css/styles.css",
@@ -18,10 +18,10 @@
   "devDependencies": {
     "autoprefixer": "^10.0.2",
     "clean-css-cli": "^4.3.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^5.0.0",
     "postcss": "^8.1.9",
     "postcss-cli": "^8.3.0",
-    "postcss-scss": "^2.1.1",
+    "postcss-scss": "^3.0.4",
     "rimraf": "^3.0.2",
     "tailwindcss": "^2.0.1",
     "watch": "^1.0.2"
