--- a/tailwind/app_template_v1/static_src/package.json
+++ b/tailwind/app_template_v1/static_src/package.json
@@ -6,7 +6,7 @@
     "build": "npm run build:clean && npm run build:sass && npm run build:postcss && npm run build:cleancss",
     "build:clean": "rimraf ../static/css",
     "build:sass": "node-sass --output-style compressed src/styles.scss ../static/css/styles.css",
-    "build:postcss": "NODE_ENV=production postcss --config . --map false --output ../static/css/styles.css ../static/css/styles.css",
+    "build:postcss": "cross-env NODE_ENV=production postcss --config . --map false --output ../static/css/styles.css ../static/css/styles.css",
     "build:cleancss": "cleancss -o ../static/css/styles.css ../static/css/styles.css",
     "dev": "watch \"npm run dev:sass && npm run dev:postcss\" ./src",
     "dev:sass": "node-sass --output-style expanded --source-map true src/styles.scss ../static/css/styles.css",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "clean-css-cli": "^4.3.0",
+    "cross-env": "^7.0.3",
     "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.2",
     "postcss-scss": "^2.1.1",
