--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ deps =
     django22: Django>=2.2.9,<3.0
     django30: Django>=3.0.9,<3.1
     django31: Django>=3.1,<3.2
+    django32: Django>=3.2a1,<3.3
 setenv =
     DJANGO_SETTINGS_MODULE = test_project.settings
     PYTHONPATH = {toxinidir}
