--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-django = ">=2.2,<3.2"
+django = ">=2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.5"
