--- a/tailwind/app_template_v2/static_src/package.json
+++ b/tailwind/app_template_v2/static_src/package.json
@@ -16,6 +16,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/line-clamp": "^0.2.0",
+    "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.0.2",
     "clean-css-cli": "^4.3.0",
     "cross-env": "^7.0.3",
