--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = test_project.settings
+DJANGO_SETTINGS_MODULE = tests.settings
 python_files = tests.py test_*.py *_tests.py
 ignore = 'node_modules'
 
@@ -19,9 +19,9 @@ deps =
     django22: Django>=2.2.9,<3.0
     django30: Django>=3.0.9,<3.1
     django31: Django>=3.1,<3.2
-    django32: Django>=3.2a1,<3.3
+    django32: Django>=3.2,<3.3
 setenv =
-    DJANGO_SETTINGS_MODULE = test_project.settings
+    DJANGO_SETTINGS_MODULE = tests.settings
     PYTHONPATH = {toxinidir}
 
 [flake8]
