--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ pre-commit = "^2.6.0"
 isort = "^5.6.4"
 flake8 = "^3.8.4"
 black = "^20.8b1"
+Sphinx = "^3.5.3"
+recommonmark = "^0.7.1"
+sphinx-rtd-theme = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
