--- a/example/theme/static_src/package.json
+++ b/example/theme/static_src/package.json
@@ -4,11 +4,11 @@
   "scripts": {
     "start": "npm run dev",
     "build": "npm run build:clean && npm run build:postcss && npm run build:cleancss",
-    "build:clean": "rimraf ../static/theme/css",
-    "build:postcss": "cross-env NODE_ENV=production postcss --config . --map false --output ../static/theme/css/styles.css ./src/styles.css",
-    "build:cleancss": "cleancss -o ../static/theme/css/styles.css ../static/theme/css/styles.css",
+    "build:clean": "rimraf ../static/css/dist",
+    "build:postcss": "cross-env NODE_ENV=production postcss --config . --map false --output ../static/css/dist/styles.css ./src/styles.css",
+    "build:cleancss": "cleancss -o ../static/css/dist/styles.css ../static/css/dist/styles.css",
     "sync": "browser-sync start --config bs.config.js",
-    "dev:postcss": "cross-env NODE_ENV=development postcss --config . --map true --output ../static/theme/css/styles.css -w ./src/styles.css",
+    "dev:postcss": "cross-env NODE_ENV=development postcss --config . --map true --output ../static/css/dist/styles.css -w ./src/styles.css",
     "dev:sync": "run-p dev:postcss sync",
     "dev": "nodemon -x \"npm run dev:sync\" -w tailwind.config.js -w postcss.config.js -w bs.config.js -e js"
   },
