--- a/src/tailwind/app_template_v2/{{cookiecutter.app_name}}/static_src/package.json
+++ b/src/tailwind/app_template_v2/{{cookiecutter.app_name}}/static_src/package.json
@@ -1,5 +1,6 @@
 {
   "name": "{{ cookiecutter.app_name }}",
+  "version": "2.0.0",
   "description": "",
   "scripts": {
     "start": "npm run dev",
