fix docker config and add tailwindstart

--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -6,10 +6,15 @@ RUN apt-get update \
   && apt-get install -y build-essential curl \
   && curl -sL https://deb.nodesource.com/setup_14.x | bash - \
   && apt-get install -y nodejs --no-install-recommends \
+  && apt-get -qy install netcat \
   && rm -rf /var/lib/apt/lists/* /usr/share/doc /usr/share/man \
   && apt-get clean \
   && useradd --create-home python \
   && chown python:python -R /app
+
+RUN curl -OL https://raw.githubusercontent.com/eficode/wait-for/master/wait-for
+RUN chmod +x wait-for
+RUN cp wait-for /usr/bin/wait-for
 
 USER python
 
@@ -24,10 +29,6 @@ ENV DEBUG="${DEBUG}" \
 
 COPY --chown=python:python . .
 
-WORKDIR /app
-
 RUN SECRET_KEY=nothing python manage.py tailwind install --no-input;
 RUN SECRET_KEY=nothing python manage.py tailwind build --no-input;
 RUN SECRET_KEY=nothing python manage.py collectstatic --no-input;
-
-CMD ["python", "manage.py", "runserver"]
