Adds support for Tailwind CSS v2.2; Adds TAILWIND_DEV_MODE setting

--- a/example/theme/static_src/package.json
+++ b/example/theme/static_src/package.json
@@ -1,38 +1,35 @@
 {
   "name": "theme",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "",
   "scripts": {
     "start": "npm run dev",
-    "build": "npm run build:clean && npm run build:postcss && npm run build:cleancss",
+    "build": "npm run build:clean && npm run build:tailwind",
     "build:clean": "rimraf ../static/css/dist",
-    "build:postcss": "cross-env NODE_ENV=production postcss --config . --map false --output ../static/css/dist/styles.css ./src/styles.css",
-    "build:cleancss": "cleancss -o ../static/css/dist/styles.css ../static/css/dist/styles.css",
+    "build:tailwind": "cross-env NODE_ENV=production npx tailwindcss -p -i ./src/styles.css -o ../static/css/dist/styles.css --minify",
     "sync": "browser-sync start --config bs.config.js",
-    "dev:postcss": "cross-env NODE_ENV=development postcss --config . --map true --output ../static/css/dist/styles.css -w ./src/styles.css",
-    "dev:sync": "run-p dev:postcss sync",
+    "dev:tailwind": "cross-env NODE_ENV=development npx tailwindcss -p -i ./src/styles.css -o ../static/css/dist/styles.css -w",
+    "dev:sync": "run-p dev:tailwind sync",
     "dev": "nodemon -x \"npm run dev:sync\" -w tailwind.config.js -w postcss.config.js -w bs.config.js -e js"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.3.2",
-    "@tailwindcss/line-clamp": "^0.2.0",
-    "@tailwindcss/typography": "^0.4.0",
-    "autoprefixer": "^10.2.5",
-    "browser-sync": "^2.26.14",
-    "clean-css-cli": "^5.2.2",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.1",
+    "browser-sync": "^2.27.1",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.9",
+    "postcss": "^8.3.5",
     "postcss-cli": "^8.3.1",
-    "postcss-import": "^14.0.1",
+    "postcss-import": "^14.0.2",
     "postcss-nested": "^5.0.5",
     "postcss-simple-vars": "^6.0.3",
     "rimraf": "^3.0.2",
-    "tailwindcss": "^2.1.1"
+    "tailwindcss": "~2.2.4"
   }
 }
