--- a/example/theme/static_src/package.json
+++ b/example/theme/static_src/package.json
@@ -6,9 +6,9 @@
     "start": "npm run dev",
     "build": "npm run build:clean && npm run build:tailwind",
     "build:clean": "rimraf ../static/css/dist",
-    "build:tailwind": "cross-env NODE_ENV=production npx tailwindcss -p -i ./src/styles.css -o ../static/css/dist/styles.css --minify",
+    "build:tailwind": "cross-env NODE_ENV=production npx tailwindcss --postcss -i ./src/styles.css -o ../static/css/dist/styles.css --minify",
     "sync": "browser-sync start --config bs.config.js",
-    "dev:tailwind": "cross-env NODE_ENV=development npx tailwindcss -p -i ./src/styles.css -o ../static/css/dist/styles.css -w",
+    "dev:tailwind": "cross-env NODE_ENV=development npx tailwindcss --postcss -i ./src/styles.css -o ../static/css/dist/styles.css -w",
     "dev:sync": "run-p dev:tailwind sync",
     "dev": "nodemon -x \"npm run dev:sync\" -w tailwind.config.js -w postcss.config.js -w bs.config.js -e js"
   },
