--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ ignore = 'node_modules'
 
 [tox]
 isolated_build = True
-envlist = django{22,30,31,32}
+envlist = django{22,30,31,32,40}
 
 [tox:.package]
 # note tox will use the same python version as under what tox is installed to package
@@ -20,6 +20,7 @@ deps =
     django30: Django>=3.0.9,<3.1
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
+    django40: Django>=4.0a1,<4.1
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings
     PYTHONPATH = {toxinidir}
