--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
     django30: Django>=3.0.9,<3.1
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
-    django40: Django==4.0a1
+    django40: Django>=4.0a1,<5.0
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings
     PYTHONPATH = {toxinidir}
