--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -17,5 +17,8 @@ services:
   tailwind:
     <<: *default-app
     command: "python manage.py tailwind start"
+    # Without tty, no stdin, and tailwind watcher aborts
+    # https://github.com/tailwindlabs/tailwindcss/issues/5324
+    tty: true
     ports:
       - "8383:8383"
