--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ packages = [
 python = "^3.8"
 django = ">=2.2.25"
 cookiecutter = "^1.7.3"
+django-browser-reload = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
