--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,11 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 django = ">=2.2.25"
-cookiecutter = "^1.7.3"
 django-browser-reload = "^1.3.0"
+cookiecutter = { version = "^1.7.3", optional = true }
+
+[tool.poetry.extras]
+cookiecutter = ["cookiecutter"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
