--- a/example/theme/static_src/package.json
+++ b/example/theme/static_src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "theme",
-  "version": "3.1.1",
+  "version": "3.1.4",
   "description": "",
   "scripts": {
     "start": "npm run dev",
@@ -15,15 +15,15 @@
   "license": "MIT",
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/line-clamp": "^0.3.1",
-    "@tailwindcss/typography": "^0.5.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0efb.5.2",
     "cross-env": "^7.0.3",
-    "postcss": "^8.4.5",
-    "postcss-import": "^14.0.2",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
     "postcss-nested": "^5.0.6",
     "postcss-simple-vars": "^6.0.3",
     "rimraf": "^3.0.2",
-    "tailwindcss": "^3.0.13"
+    "tailwindcss": "^3.1.3"
   }
 }
