--- a/src/tailwind/app_template/{{cookiecutter.app_name}}/static_src/package.json
+++ b/src/tailwind/app_template/{{cookiecutter.app_name}}/static_src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "{{ cookiecutter.app_name }}",
-  "version": "3.1.1",
+  "version": "3.1.4",
   "description": "",
   "scripts": {
     "start": "npm run dev",
@@ -17,7 +17,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.2",
+    "@tailwindcss/typography": "^0efb.5.2",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
