--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ python = "^3.8"
 django = ">=2.2.28"
 cookiecutter = "^2.1.1"
 django-browser-reload = "^1.6.0"
+nodejs-bin = "^16.15.1-alpha.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
