--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "django-tailwind"
-version = "3.2.0"
+version = "3.3.0"
 description = "Tailwind CSS Framework for Django projects"
 authors = ["Tim Kamanin <tim@timonweb.com>"]
 license = "MIT"
@@ -30,13 +30,13 @@ django = ">=2.2.28"
 django-browser-reload = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
+pytest = "^7.1.2"
 pytest-django = "^4.5.2"
-tox = "^3.24.4"
-pre-commit = "^2.16.0"
+tox = "^3.25.0"
+pre-commit = "^2.19.0"
 isort = "^5.10.1"
 flake8 = "^4.0.1"
-black = "^21.12b0"
+black = "^22.3.0"
 Sphinx = "^4.3.1"
 recommonmark = "^0.7.1"
 sphinx-rtd-theme = "^1.0.0"
