chore: rename tailwind module to django_tailwind
The current name clashes with tailwind module.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
     "Framework :: Django"
 ]
 packages = [
-    { include = "tailwind", from = "src" }
+    { include = "django_tailwind", from = "src" }
 ]
 
 [tool.poetry.dependencies]
