Fixes tox allow_externals

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ ignore = 'node_modules'
 [tox]
 isolated_build = True
 envlist = django{32,40,41}
-allowlist_externals = poetry, pytest
+allowlist_externals=*
 
 [tox:.package]
 # note tox will use the same python version as under what tox is installed to package
