--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,6 @@ ignore = 'node_modules'
 [tox]
 isolated_build = True
 envlist = django{32,40,41}
-allowlist_externals=*
 
 [tox:.package]
 # note tox will use the same python version as under what tox is installed to package
@@ -16,6 +15,7 @@ basepython = python3
 
 [testenv]
 commands = pytest {posargs}
+allowlist_externals = pytest
 deps =
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
