--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ ignore = 'node_modules'
 
 [tox]
 isolated_build = True
-envlist = django{32,40,41}
+envlist = django{32,40,41,42}
 
 [tox:.package]
 # note tox will use the same python version as under what tox is installed to package
@@ -20,6 +20,7 @@ deps =
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
     django41: Django>=4.1,<4.2
+    django42: Django>=4.2rc1,<5.0
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings
     PYTHONPATH = {toxinidir}
