--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ ignore = 'node_modules'
 
 [tox]
 isolated_build = True
-envlist = django{32,40,41,42}
+envlist = django{32,40,41,42,50}
 
 [tox:.package]
 # note tox will use the same python version as under what tox is installed to package
@@ -21,6 +21,7 @@ deps =
     django40: Django>=4.0,<4.1
     django41: Django>=4.1,<4.2
     django42: Django>=4.2,<5.0
+    django50: Django>=5.0,<5.1
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings
     PYTHONPATH = {toxinidir}
