--- a/src/tailwind/app_template_v4/{{cookiecutter.app_name}}/static_src/package.json
+++ b/src/tailwind/app_template_v4/{{cookiecutter.app_name}}/static_src/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
+{% if cookiecutter.include_daisy_ui == 'yes' %}    "daisyui": "^5.0.43",{% endif %}
     "cross-env": "^7.0.3",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
