Drops Python 3.10 support; Adds Django 6.0 tests

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ ignore = 'node_modules'
 
 [tox]
 isolated_build = True
-envlist = django{40,41,42,50}
+envlist = django{42,50,51,52,60}
 
 [tox:.package]
 # note tox will use the same python version as under what tox is installed to package
@@ -21,6 +21,7 @@ deps =
     django50: Django>=5.0,<5.1
     django51: Django>=5.1,<5.2
     django52: Django>=5.2,<5.3
+    django60: Django>=6.0,<6.1
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings
     PYTHONPATH = {toxinidir}
