--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ deps =
     django50: Django>=5.0,<5.1
     django51: Django>=5.1,<5.2
     django52: Django>=5.2,<5.3
-    django60: Django>=6.0,<6.1
+    django60: Django>=6a1,<6.1
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings
     PYTHONPATH = {toxinidir}
