--- a/tox.ini
+++ b/tox.ini
@@ -1,39 +1,28 @@
-[pytest]
-DJANGO_SETTINGS_MODULE = tests.settings
-python_files = tests.py test_*.py *_tests.py
-ignore = 'node_modules'
-
 [tox]
-isolated_build = True
-envlist = django{42,50,51,52,60}
-
-[tox:.package]
-# note tox will use the same python version as under what tox is installed to package
-# so unless this is python 3 you can require a given python version for the packaging
-# environment via the basepython key
-basepython = python3
+requires =
+    tox>=4.2
+env_list =
+    py314-django{60, 52}
+    py313-django{60, 52, 51}
+    py312-django{60, 52, 51, 50, 42}
+    py311-django{52, 51, 50, 42}
 
 [testenv]
-commands = pytest {posargs}
-allowlist_externals = pytest
-deps =
-    django42: Django>=4.2,<5.0
-    django50: Django>=5.0,<5.1
-    django51: Django>=5.1,<5.2
-    django52: Django>=5.2,<5.3
-    django60: Django>=6a1,<6.1
-setenv =
-    DJANGO_SETTINGS_MODULE = tests.settings
-    PYTHONPATH = {toxinidir}
-
-[flake8]
-max-line-length = 119
-select = C,E,F,W,B,B950,T
-ignore = E231,E501,W503
-
-[isort]
-multi_line_output = 3
-include_trailing_comma = True
-force_grid_wrap = 0
-use_parentheses = True
-line_length = 119
+runner = uv-venv-lock-runner
+package = wheel
+wheel_build_env = .pkg
+set_env =
+    PYTHONDEVMODE = 1
+commands =
+    python \
+      -W error::ResourceWarning \
+      -W error::DeprecationWarning \
+      -W error::PendingDeprecationWarning \
+      -m pytest {posargs:tests}
+dependency_groups =
+    test
+    django42: django42
+    django50: django50
+    django51: django51
+    django52: django52
+    django60: django60
