--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries",
     "Topic :: Utilities",
 ]
-dependencies = [ "django>=4.2.20" ]
+dependencies = [ "django>=4.2.20", "honcho>=2.0.0" ]
 
 optional-dependencies.reload = [ "django-browser-reload>=1.18.0,<2" ]
 urls.Homepage = "https://github.com/timonweb/django-tailwind"
