--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands =
       -W error::PendingDeprecationWarning \
       -m pytest {posargs:tests}
 dependency_groups =
-    test
+    dev
     django42: django42
     django50: django50
     django51: django51
